# loopr

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: benchmark_loo.py  benchmark_rank_entities.py
docs/: README.md  ablations.md  analysis-and-diagnostics.md  defaults-and-recipes.md  engines-and-configuration.md  how-loopr-works.md  input-patterns.md  mathematical-machinery.md  result-modes.md  validation-and-benchmarks.md  validation-harness.md
docs/case-studies/: README.md  mario-kart-lounge.md  sendou-plus.md
examples/quickstart/: README.md  appearances.csv  entities.csv  generate_dataset.py  groups.csv  matches.csv  participants.csv
scripts/: compare_sendouq_fidelity.py
src/loopr/: __init__.py  __main__.py  api.py  cli.py  example_data.py  fit.py  schema.py
src/loopr/algorithms/: __init__.py  _log_odds_common.py  compat.py  exposure_log_odds.py  tick_tock.py  ttl_engine.py
src/loopr/algorithms/backends/: __init__.py  log_odds.py  row_pr.py
src/loopr/analysis/: __init__.py  _loo_numba.py  loo_analyzer.py
src/loopr/core/: __init__.py  config.py  connectivity.py  constants.py  convert.py  edges.py  logging.py  pagerank.py  preparation.py  protocols.py  results.py  smoothing.py  time.py
tests/: conftest.py  test_backends.py  test_cli.py  test_config_results.py  test_convert.py  test_e2e.py  test_edges.py  test_engine_maintainability.py  test_example_data.py  test_fit.py  test_influence.py  test_log_odds_common.py  test_loo_analyzer.py  test_loopr_engine.py  test_pagerank.py  test_preparation.py  test_schema.py  test_smoothing.py  test_teleport.py  test_time.py
