[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loopr-ranking"
dynamic = ["version"]
description = "Domain-agnostic LOOPR ranking engine library"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "LOOPR contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24",
    "polars>=0.20",
    "scipy>=1.10",
]

[project.urls]
Documentation = "https://github.com/cesaregarza/loopr/blob/main/docs/README.md"
Homepage = "https://github.com/cesaregarza/loopr"
Issues = "https://github.com/cesaregarza/loopr/issues"
Repository = "https://github.com/cesaregarza/loopr"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "twine>=6.0",
]
accel = ["numba>=0.60"]

[project.scripts]
loopr = "loopr.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "loopr._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
